@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man
-.TH ISO_DELTA  "1" " " "iso_delta: Antiprism 0.31 - http://www.antiprism.com" "User Commands"
+.TH ISO_DELTA  "1" " " "iso_delta: Antiprism 0.31.99 - http://www.antiprism.com" "User Commands"
 .SH NAME
 iso_delta - isohedral deltahedra
 .SH SYNOPSIS
@@ -57,7 +57,7 @@ dipyramid of n/d using \fB\-n\fR n/d (infinite set) where 6/5 <= n/d <= 6
 .TP
 a \- tetrahedron repeated k times, evenly spaced
 when k=1 tetrahedron, when k=2 Stella Octangula
-Uniform Compound Set UC23 when n/d is 2/1
+Uniform Compound Set UC22 when n/d is 2/1 and angle 0
 .TP
 b \- 5 or 10 tetrahedra
 s=1 icosahedral, s=2 with horizontal reflection
@@ -86,11 +86,11 @@ additional cases:
 .TP
 g \- 2 tetrahedra using \fB\-a\fR angle (default: 45.0)
 At 45.0 degrees is Uniform Compound UC04
-Uniform Compound Set UC23 when n/d is 2/1 and k=1
+Uniform Compound Set UC22 when n/d is 2/1 and k=1
 .TP
 h \- 2 tetrahedra repeated k times, evenly spaced
 using \fB\-a\fR angle (default: 1.0)
-Uniform Compound Set UC23 when n/d is 2/1 for any k
+Uniform Compound Set UC22 when n/d is 2/1 for any k
 .TP
 i \- 6 tetrahedra using \fB\-a\fR angle (default: 45.0)
 Uniform Compound UC01. At 45.0 degrees is UC03
